Closed Bug 399811 Opened 18 years ago Closed 18 years ago

local directory for movemail doesn't get migrated to new profile folder

Categories

(SeaMonkey :: Startup & Profiles, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: kairo, Assigned: standard8)

References

Details

Attachments

(1 file)

I just realized that in my profile I migrated from xpfe to suiterunner, the location of the movemail account's files still pointed to the old .mozilla/<profilename> directory. movemail uses the same local folder stuff as Local Folders and POP3 (my files are in <profile>/Mail/localhost/), so it should probably be added as an additional case in http://mxr.mozilla.org/seamonkey/source/suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp#1199
Depends on: 329744
Attached patch Possible FixSplinter Review
This should hopefully fix it.
Assignee: nobody → bugzilla
Status: NEW → ASSIGNED
Attachment #287330 - Flags: review?(kairo)
Comment on attachment 287330 [details] [diff] [review] Possible Fix yes, looks good. r=me
Attachment #287330 - Flags: review?(kairo) → review+
I've just checked this in: Checking in suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp; /cvsroot/mozilla/suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp,v <-- nsNetscapeProfileMigratorBase.cpp new revision: 1.16; previous revision: 1.15 Fixed.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: