Bug 399811 local directory for movemail doesn't get migrated to new profile folder. r=KaiRo