suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp
@@ -1196,7 +1196,8 @@ nsNetscapeProfileMigratorBase::CopyMailFolderPrefs(PBStructArray &aMailServers,
         mTargetProfile->Clone(getter_AddRefs(targetMailFolder));
         targetMailFolder->Append(IMAP_MAIL_DIR_50_NAME);
       }
-      else if (serverType.Equals("none") || serverType.Equals("pop3")) {
+      else if (serverType.Equals("none") || serverType.Equals("pop3") ||
+               serverType.Equals("movemail")) {
         // local folders and POP3 servers go under <profile>\Mail
         mTargetProfile->Clone(getter_AddRefs(targetMailFolder));
         targetMailFolder->Append(MAIL_DIR_50_NAME);
